Cambios en el auth y arreglos

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=5000
 AUTH_PORT=5001
 BASE_URL=http://localhost:5000
-MONGO_URI=mongodb://127.0.0.1:27017/tupeluya
+MONGO_URI=mongodb+srv://conseguiturno:dYPsgfi0PYAZd0x8@cluster0.3igehyr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=tuSuperSecretoJWT
+JWT_EXPIRATION = 2592000 # 30 días en segundos
