--- a/.env
+++ b/.env
@@ -1,11 +1,4 @@
-
-BASE_URL=http://localhost:5000
-MONGO_URI=mongodb+srv://conseguiturno:dYPsgfi0PYAZd0x8@cluster0.3igehyr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=tuSuperSecretoJWT
-JWT_EXPIRATION = 2592000 # 30 días en segundos
-
-#PORTS
-PORT=5000
-AUTH_PORT_PRESTADOR=5001
-AUTH_PORT_CLIENTE=5002
-EMPLOYES_PORT=5003
+PORT_AUTH=3001
+PORT_SERVICIOS=3002
+MONGO_URI=mongodb+srv://conseguiturno:44873598Tt@consegui.i0fthao.mongodb.net/?retryWrites=true&w=majority&appName=Consegui
+JWT_SECRET=supersecreto123
