Creacion micro general.js para juntar toda la reserva en un solo lugar

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 PORT_AUTH=3001
 PORT_SERVICIOS=3002
+PORT_HORARIOS=3003
+PORT_TURNOS=3004
+PORT_GRAL=3005
+
+PORTGATEWAY=3000
+
 MONGO_URI=mongodb+srv://conseguiturno:44873598Tt@consegui.i0fthao.mongodb.net/?retryWrites=true&w=majority&appName=Consegui
 JWT_SECRET=supersecreto123
